[package]
name = "forage"
version = "0.0.1"
edition = "2018"
description = "Forage is for Storage"
repository = "https://github.com/FuzzrNet/Forage"
license = "Unlicense"

[build]
rustflags = "-Ctarget-feature=+sse3,+avx,+aes"

[features]
default = ["rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[dependencies]
anyhow = "1.0.44"
bao = "0.12.0"
blake3 = "1.0.0"
chrono = "0.4.19"
directories-next = "2.0.0"
hex = "0.4.3"
human_bytes = "0.3.0"
infer = "0.5.0"
log = "0.4.14"
once_cell = "1.8.0"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
rusqlite = { version = "0.25.3", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
sled = { version = "0.34.6", features = ["compression"] }
structopt = "0.3.23"
tokio = { version = "1.11.0", features = ["full"] }
toml = "0.5.8"
torut = "0.2.0"
walkdir = "2.3.2"
